--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ known_isaaclabparty = [
 ]
 
 # Modify the following to include the package names of your first-party code
-known_firstparty = "ext_template"
+known_firstparty = "ballu_isaac_extension"
 known_local_folder = "config"
 
 [tool.pyright]
