--- a/scripts/WnB_Sweeps/sweep_config.yaml
+++ b/scripts/WnB_Sweeps/sweep_config.yaml
@@ -2,28 +2,30 @@ program: scripts/WnB_Sweeps/sweep_agent.py
 method: bayes
 metric:
   goal: maximize
-  name: avg_play_reward
+  name: avg_velocity
 parameters:
   gravity_comp_ratio:
     distribution: uniform
-    min: 0.40
-    max: 0.99
+    min: 0.74
+    max: 0.86
   femur_to_tibia_ratio:
     values: [
       8.0, 7.8, 7.6, 7.4, 7.2, 7.0, 6.8, 6.6, 6.4, 6.2, 6.0,
       5.8, 5.6, 5.4, 5.2, 5.0, 4.8, 4.6, 4.4, 4.2, 4.1, 4.0,
       3.8, 3.6, 3.4, 3.2, 3.1, 3.0, 2.8, 2.6, 2.4, 2.2, 2.0
     ]
-  motor_limit:
+  spring_coefficient:
     distribution: uniform
-    min: 0.04
-    max: 0.14
+    min: 0.001
+    max: 0.013
   seed:
     values: [0, 1, 2]
   # Fixed training parameters (can be modified as needed)
   task:
     value: "Isc-Vel-BALLU-encoder"
   max_iterations:
-    value: 6000
+    value: 3000
   num_envs:
     value: 4096
+  motor_limit:
+    value: 0.14
